// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Preview/> renders as expected 1`] = `
<div
  className="validation-message-box"
>
  <p
    className="validation-message"
  />
</div>
`;

exports[`<Preview/> renders nothing when no props given 1`] = `
<div
  className="validation-message-box"
>
  <p
    className="validation-message"
  />
</div>
`;

exports[`<Preview/> renders with props 1`] = `
<div
  className="validation-message-box"
>
  <p
    className="validation-message"
  >
    Validation Error String
  </p>
</div>
`;
